--- a/css/reset.css
+++ b/css/reset.css
@@ -28,6 +28,8 @@ h3 {
   font-weight: bold;
 }
 
+.clearfix:after { content: ''; display: table; clear: both; }
+
 .primary { color: #e74c3c; }
 
 .primary-bg { background-color: #e74c3c; }
@@ -41,6 +43,8 @@ h3 {
 .secondary-sky-blue-bg { background-color: #2d82d8; }
 
 a:focus { outline: 0; }
+
+a:hover { text-decoration: none; }
 
 ul { list-style: none; }
 
