--- a/style.css
+++ b/style.css
@@ -29,3 +29,57 @@ header nav ul li a:hover, header nav ul li:focus {
   color: #e74c3c;
   text-decoration: none;
 }
+
+header ul { margin-bottom: 0px; height: 112px; }
+
+/* Slider section */
+.slider, .slider ul.slider-carousel, .slider ul.slider-carousel li {
+  height: 600px;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+}
+
+.slider ul.slider-carousel li h1 { margin-top: 150px; margin-bottom: 30px; color: #fff; }
+
+.slider ul.slider-carousel li p { margin-bottom: 50px; }
+
+.slider ul.slider-carousel li a {
+  padding: 10px 50px;
+  margin-right: 30px;
+  color: #fff;
+  font-weight: bold;
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+}
+
+.slider ul.slider-carousel li a:last-child {
+  margin-right: 0px;
+}
+
+.img1 { background: url(img/slider/slider1.png) no-repeat 0px 0px; -webkit-background-size: 100% 100%;
+background-size: 100% 100%; }
+.img2 { background: url(img/slider/slider2.png) no-repeat 0px 0px; -webkit-background-size: 100% 100%;
+  background-size: 100% 100%; }
+.img3 { background: url(img/slider/slider3.png) no-repeat 0px 0px; -webkit-background-size: 100% 100%;
+  background-size: 100% 100%; }
+
+.slider ul.slider-carousel li a.cta1:hover { 
+  background-color: #ff695a; 
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px; 
+}
+.slider ul.slider-carousel li a.cta2:hover { 
+  background-color: #3f9cfa; 
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px; 
+}
+
+.caroufredsel_wrapper { margin: 0 !important; }
+.slider ul.sliderpager li { padding: 0 5px; height: 28px; line-height: 28px; }
+.slider ul.sliderpager li a { color: #34495e; }
+.slider ul.sliderpager li.selected a { color: #e74c3c; }
