--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ header {
   color: #fff;
   height: 112px;
   line-height: 112px;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
 }
 
 header a {
@@ -39,6 +42,8 @@ header ul { margin-bottom: 0px; height: 112px; }
   text-align: center;
   color: #fff;
 }
+
+.slider ul.slider-carousel li { padding-top: 60px; }
 
 .slider ul.slider-carousel li h1 { margin-top: 150px; margin-bottom: 30px; color: #fff; }
 
