Add markup and style for services section

--- a/css/reset.css
+++ b/css/reset.css
@@ -49,3 +49,5 @@ a:hover { text-decoration: none; }
 ul { list-style: none; }
 
 ul li { display: inline-block; }
+
+.section-padding { padding: 56px 0px; }
