--- a/style.css
+++ b/style.css
@@ -88,3 +88,15 @@ background-size: 100% 100%; }
 .slider ul.sliderpager li { padding: 0 5px; height: 28px; line-height: 28px; }
 .slider ul.sliderpager li a { color: #34495e; }
 .slider ul.sliderpager li.selected a { color: #e74c3c; }
+
+/* services section */
+.services { 
+  text-align: center;
+}
+
+.services .services-content i {
+  font-size: 32px;
+  color: #555;
+}
+
+.services-header { margin-bottom: 42px; }
