--- a/style.css
+++ b/style.css
@@ -99,4 +99,92 @@ background-size: 100% 100%; }
   color: #555;
 }
 
-.services-header { margin-bottom: 42px; }
+.services-header, .portfolio-header {
+  margin-bottom: 42px;
+  text-align: center;
+}
+
+.portfolio {
+  /*background-color: #e9a02e;*/
+  color: #fff;
+  background: url(img/portfolio/portfolio-bg.png);
+  background-attachment: fixed;
+  -webkit-background-size: 100% 100%;
+  background-size: 100% 100%;
+}
+
+.portfolio .inner-content { 
+  position: relative; 
+  width: 265px;
+  height: 225px;
+  overflow: hidden;
+}
+
+.portfolio .inner-content img {
+  width: 100%;
+  height: 100%;
+}
+
+.portfolio .inner-content .overlay-content {
+  position: absolute; 
+  top: 100%; 
+  left: 0;
+  text-align: center;
+  background: rgba(0,0,0,.8);
+  width: 100%;
+  height: 100%;
+
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+}
+
+portfolio-carousel li {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.portfolio .inner-content .overlay-content h3, .portfolio .inner-content .overlay-content p {
+  color: white;
+}
+
+.portfolio .inner-content .overlay-content h3 {
+  padding-top: 20%;
+  color: #e74c3c;
+}
+
+.portfolio .inner-content:hover .overlay-content { top: 0; }
+
+.portfolio .inner-content:hover .overlay-content p a {
+  color: #2d82d8;
+  font-weight: bold;
+}
+
+.portfolio .portfolio-nav {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.portfolio .portfolio-nav li {
+  cursor: pointer;
+  margin-right: 10px;
+  font-style: 14px;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  background-color: #333;
+  color: #fff;
+  font-weight: bold;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+
+.portfolio .portfolio-nav li:last-child {
+  margin-right: 0px;
+}
+
+.portfolio .portfolio-nav li:hover {
+  background-color: #e74c3c;
+}
