--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ background-size: 100% 100%; }
   color: #555;
 }
 
-.services-header, .portfolio-header {
+.services-header, .portfolio-header, .team-header {
   margin-bottom: 42px;
   text-align: center;
 }
@@ -187,4 +187,100 @@ portfolio-carousel li {
 
 .portfolio .portfolio-nav li:hover {
   background-color: #e74c3c;
+}
+
+/* team section */
+.team .inner-content { 
+  position: relative; 
+  width: 265px;
+  height: 225px;
+  overflow: hidden;
+}
+
+.team .inner-content img {
+  width: 100%;
+  height: 100%;
+}
+
+.team .inner-content .overlay-content {
+  position: absolute; 
+  top: 100%; 
+  left: 0;
+  text-align: center;
+  background: rgba(0,0,0,.8);
+  width: 100%;
+  height: 100%;
+
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+}
+
+team-carousel li {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.team .inner-content:hover .overlay-content { top: 0; }
+
+.team .team-nav {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.team .team-nav li {
+  cursor: pointer;
+  margin-right: 10px;
+  font-style: 14px;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  background-color: #333;
+  color: #fff;
+  font-weight: bold;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+
+.team .team-nav li:last-child {
+  margin-right: 0px;
+}
+
+.team .team-nav li:hover {
+  background-color: #e74c3c;
+}
+
+.team-carousel .inner-content p.name {
+  padding-top: 15%;
+}
+
+.team-carousel .inner-content p.description {
+  padding: 0 15px;
+}
+
+ul.member-social-links li { margin: 0px 10px; }
+
+ul.member-social-links li i {
+  font-style: 14px;
+  color: #fff;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+
+ul.member-social-links li i.fa-facebook {
+  background-color: #3b5998;
+}
+
+ul.member-social-links li i.fa-twitter {
+  background-color: #00aced;
+}
+
+ul.member-social-links li i.fa-linkedin {
+  background-color: #007bb6;
 }
