Add markup and style for contact section

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ background-size: 100% 100%; }
   color: #555;
 }
 
-.services-header, .portfolio-header, .team-header, .testimonials-header, .blog-header {
+.services-header, .portfolio-header, .team-header, .testimonials-header, .blog-header, .contact-header {
   margin-bottom: 42px;
   text-align: center;
 }
@@ -360,3 +360,43 @@ blockquote:after {
   transition: all .3s ease-in;
 }
 .blog h3 a:hover { color: #e74c3c; }
+
+/* contact section */
+.contact {
+  /*background: #39787c;*/
+  background: url(img/contact-bg.png);
+  background-attachment: fixed;
+  -webkit-background-size: 100% 100%;
+  background-size: 100% 100%;
+  color: #fff;
+}
+
+form {
+  width: 40%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+input:not([type=submit]), textarea {
+  width: 100%;
+  margin-bottom: 40px;
+  color: #777;
+  padding-left: 20px;
+  box-shadow: 5px 5px 3px rgba(0,0,0,0.2) inset;
+  border: none;  /* box-shadow no-show-fix for Firefox */
+}
+
+input:not([type=submit]) { 
+  height: 40px;
+  line-height: 40px;
+}
+
+textarea { padding-top: 10px; }
+
+#submit {
+  padding: 10px 30px;
+  color: #fff;
+  background: #e74c3c;
+  border: none;
+  font-weight: bold;
+}
