--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ blockquote:after {
   color: #fff;
 }
 
-form {
+form.contact-form {
   width: 40%;
   margin: 0 auto;
   text-align: center;
@@ -400,3 +400,76 @@ textarea { padding-top: 10px; }
   border: none;
   font-weight: bold;
 }
+
+/* footer */
+footer { padding-top: 56px; }
+
+footer h1 {
+  padding-bottom: 28px;
+}
+
+footer p i { color: #2d82d8; }
+
+footer p span {
+  padding-left: 15px;
+  font-weight: bold;
+}
+
+footer p.about { margin-bottom: 20px; }
+
+form.update-form input:not([type=submit]), textarea {
+  width: 100%;
+  margin-bottom: 40px;
+  color: #777;
+  padding-left: 20px;
+  box-shadow: 5px 5px 3px rgba(0,0,0,0.2) inset;
+  border: none;  /* box-shadow no-show-fix for Firefox */
+}
+
+#take-email { margin-bottom: 20px; }
+
+#submit-button {
+  background-color: #e74c3c;
+  color: #fff;
+  border: none;
+  padding: 0px 30px;
+  height: 40px;
+  line-height: 40px;
+  font-weight: bold;
+}
+
+.footer-social-links li {
+  padding: 0 10px;
+  font-size: 28px;
+}
+
+.footer-social-links li a i.fa-facebook {
+  color: #3b5998;
+}
+.footer-social-links li a i.fa-twitter {
+  color: #00aced;
+}
+.footer-social-links li a i.fa-dribbble {
+  color: #3b5998;
+}
+.footer-social-links li a i.fa-linkedin {
+  color: #007bb5;
+}
+.footer-social-links li a i.fa-youtube {
+  color: #bb0000;
+}
+
+.copyright { 
+  text-align: center;
+  color: #fff;
+  background-color: #333;
+  height: 42px;
+  line-height: 42px;
+  margin-top: 56px;
+}
+
+footer p span.primary {
+  padding-left: 0;
+}
+
+.copyright p { margin: 0; }
