--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ background-size: 100% 100%; }
   transition: all .3s ease-in;
 }
 
-portfolio-carousel li {
+.portfolio-carousel li {
   margin-right: 10px;
   margin-left: 10px;
 }
