--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,6 +56,24 @@
 
   .slider ul.slider-carousel li h1 { margin-top: 80px; }
 
+  /* portfolio responsive styles */
+  .portfolio {
+    background: none;
+    background-color: #eca535;
+  }
+  .portfolio-carousel h3 { font-size: 14px; }
+  .portfolio .inner-content { width: 180px; height: 160px; }
+  .portfolio-carousel li {
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+  .portfolio-carousel .portfolio-nav li { margin-right: 0px; }
+}
+
+@media screen and (max-width: 800px) {
+  .portfolio-carousel h3 { font-size: 12px; }
+  .portfolio .inner-content { width: 160px; height: 140px; }
+  .portfolio-carousel p { font-size: 12px; }
 }
 
 @media screen and (max-width: 550px) {
@@ -64,7 +82,6 @@
   }
 
   .slider ul.slider-carousel li h1 { margin-top: 50px; }
-
 }
 
 @media screen and (max-width: 420px) {
