--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,6 +80,12 @@
     margin-left: 0px;
   }
   .team-carousel p.description { display: none; }
+
+  /* testimonials section */
+  .testimonials {
+    background: none;
+    background-color: #0d1722;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -92,6 +98,12 @@
   .team-carousel h3 { font-size: 12px; }
   .team .inner-content { width: 160px; height: 140px; }
   .team-carousel p { font-size: 12px; }
+
+  /* testimonial styles */
+  .testimonial-carousel li {
+    margin: 0 100px;
+  }
+
 }
 
 @media screen and (max-width: 550px) {
@@ -100,6 +112,11 @@
   }
 
   .slider ul.slider-carousel li h1 { margin-top: 50px; }
+
+  /* testimonial styles */
+  .testimonial-carousel li {
+    margin: 050px;
+  }
 }
 
 @media screen and (max-width: 420px) {
