--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,6 +87,17 @@
   .blog { text-align: center; }
 
   .blog img { margin: 0 auto; }
+
+  /* contact form */
+  form.contact-form {
+    width: 60%;
+  }
+
+  .contact {
+    background: none;
+    background: #36767a;
+  }
+
 }
 
 @media screen and (max-width: 800px) {
@@ -117,6 +128,11 @@
   /* testimonial styles */
   .testimonial-carousel li {
     margin: 050px;
+  }
+
+  /* contact form */
+  form.contact-form {
+    width: 80%;
   }
 }
 
