--- a/css/animation.css
+++ b/css/animation.css
@@ -57,6 +57,38 @@ footer .row .col-md-4:nth-child(3) .animation {
   -o-animation-delay: 0.6s;
 }
 
+.services i {
+  -webkit-transition: all 0.4s ease-in;
+  -moz-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;
+}
+
+.services i:hover {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.team li .inner-content { overflow: hidden; }
+
+.team img {
+  -webkit-transition: all 0.4s ease-in;
+  -moz-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
+  transition: all 0.4s ease-in;  
+}
+
+.team .inner-content:hover img {
+  -webkit-transform: scale(1.3, 1.3);
+  -moz-transform: scale(1.3, 1.3);
+  -ms-transform: scale(1.3, 1.3);
+  -o-transform: scale(1.3, 1.3);
+  transform: scale(1.3, 1.3);
+}
+
 @media screen and (max-width: 992px) {
   .animation {
     -webkit-animation: none;
