--- a/css/reset.css
+++ b/css/reset.css
@@ -10,6 +10,12 @@ body {
   color: #777;
 }
 
+.pace-running .entire-content { opacity: 0; }
+.pace-done .entire-content {
+  opacity: 1;
+  transition: all 2s ease-in;
+}
+
 h1 {
   font-style: 36px;
   color: #555;
